<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="eldmind.cz3002.ntu.eldmind.activity.ListTaskReminderActivity">
    <item
        android:id="@+id/create_task_reminder"
        android:icon="@android:drawable/ic_menu_add"
        android:title=""
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        app:showAsAction="never" />

    <item
        android:id="@+id/addCustodee"
        android:title="@string/addCustodee"
        app:showAsAction="never" />
    <item
        android:id="@+id/verify"
        android:title="@string/verifyCustodian"
        app:showAsAction="never" />
    <item
        android:id="@+id/check_elderly"
        android:title="Check Elderly Reminders"
        app:showAsAction="never" />
    <item
        android:id="@+id/refresh"
        android:title="@string/refresh"
        app:showAsAction="never" />

</menu>
